# daily-topic

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  daily-topic.yml
docs/: slack-oauth-scopes.md  system-architecture.md  要件項目一覧.md
src/: __init__.py  config.py  main.py  models.py
src/content/: __init__.py  categorizer.py  fetcher.py  parser.py
src/slack/: __init__.py  client.py  message_poster.py  rss_fetcher.py
src/summarizer/: __init__.py  claude_client.py  summary_generator.py
src/utils/: __init__.py  error_handler.py  logger.py  time_utils.py
stats/: .gitkeep
tests/: README.md  conftest.py
tests/e2e/: __init__.py
tests/integration/: test_contract.py
tests/prompt_samples/: summarization.txt  summarization_c1.txt  summarization_c4.txt
tests/unit/: test_message_poster.py
